# SimpleScheduler

./: Cargo.toml  LICENSE
src/: job.rs  lib.rs  main.rs  scheduler.rs  trigger.rs  worker.rs
src/tests/: tests_scheduler.rs
